--- a/.gitattributes
+++ b/.gitattributes
@@ -5,12 +5,15 @@
 /Makefile.am -text
 /NEWS -text
 /README -text
+/alt.xsl -text
 /apertium-oci.oci.acx -text
 /apertium-oci.oci.metadix -text
 /apertium-oci.oci.rlx -text
 /apertium-oci.pc.in -text
 /apertium-oci.post-oci.dix -text
 /autogen.sh -text
+/buscaPar.xsl -text
 /configure.ac -text
 /modes.xml -text
 /oci.prob -text svneol=unset#unset
+/principal.xsl -text
