--- a/Makefile.am
+++ b/Makefile.am
@@ -6,6 +6,7 @@ RELEASE=0.1
 VERSION=0.1.0
 LANG1=oci
 LANG1b=oci@aran
+LANG1c=oci@gascon
 BASENAME=apertium-$(LANG1)
 
 TARGETS_COMMON =			\
@@ -21,6 +22,12 @@ TARGETS_COMMON =			\
 	$(LANG1b).autopgen.bin		\
 	$(LANG1).rlx.bin
 
+#	$(LANG1c).automorf.bin		\
+#	$(LANG1c).automorf.att.gz	\
+#	$(LANG1c).autogen.bin		\
+#	$(LANG1c).autogen.att.gz		\
+#	$(LANG1c).autopgen.bin		
+
 # Use this goal for creating .deps, otherwise make -j2 will give problems:
 @ap_include@
 
@@ -35,6 +42,9 @@ TARGETS_COMMON =			\
 	xsltproc buscaPar.xsl .deps/$(LANG1).metadix | uniq >$$$$tmp1 && \
 	xsltproc $$$$tmp1 .deps/$(LANG1).metadix > $@ && rm $$$$tmp1
 
+.deps/$(LANG1).post.dix: $(BASENAME).post-$(LANG1).dix
+	xsltproc --stringparam alt $(LANG1) alt.xsl $(BASENAME).post-$(LANG1).dix >$@
+
 .deps/$(LANG1b).metadix: $(BASENAME).$(LANG1).metadix
 	xsltproc --stringparam alt $(LANG1b) alt.xsl $(BASENAME).$(LANG1).metadix >$@
 
@@ -42,44 +52,68 @@ TARGETS_COMMON =			\
 	xsltproc buscaPar.xsl .deps/$(LANG1b).metadix | uniq >$$$$tmp1 && \
 	xsltproc $$$$tmp1 .deps/$(LANG1b).metadix > $@ && rm $$$$tmp1
 
-.deps/$(LANG1).post.dix: $(BASENAME).post-$(LANG1).dix
-	xsltproc --stringparam alt $(LANG1) alt.xsl $(BASENAME).post-$(LANG1).dix >$@
-
 .deps/$(LANG1b).post.dix: $(BASENAME).post-$(LANG1).dix
 	xsltproc --stringparam alt $(LANG1b) alt.xsl $(BASENAME).post-$(LANG1).dix >$@
+
+.deps/$(LANG1c).metadix: $(BASENAME).$(LANG1).metadix
+	xsltproc --stringparam alt $(LANG1c) alt.xsl $(BASENAME).$(LANG1).metadix >$@
+
+.deps/$(LANG1c).dix: .deps/$(LANG1c).metadix
+	xsltproc buscaPar.xsl .deps/$(LANG1c).metadix | uniq >$$$$tmp1 && \
+	xsltproc $$$$tmp1 .deps/$(LANG1c).metadix > $@ && rm $$$$tmp1
+
+.deps/$(LANG1c).post.dix: $(BASENAME).post-$(LANG1).dix
+	xsltproc --stringparam alt $(LANG1c) alt.xsl $(BASENAME).post-$(LANG1).dix >$@
 
 $(LANG1).automorf.bin: .deps/$(LANG1).dix
 	apertium-validate-dictionary .deps/$(LANG1).dix
 	lt-comp lr .deps/$(LANG1).dix $@
 
-$(LANG1b).automorf.bin: .deps/$(LANG1b).dix
-	apertium-validate-dictionary .deps/$(LANG1b).dix
-	lt-comp lr .deps/$(LANG1b).dix $@
-
 $(LANG1).autogen.bin: .deps/$(LANG1).dix
 	apertium-validate-dictionary .deps/$(LANG1).dix
 	lt-comp rl .deps/$(LANG1).dix $@
 
-$(LANG1b).autogen.bin: .deps/$(LANG1b).dix
-	apertium-validate-dictionary .deps/$(LANG1b).dix
-	lt-comp rl .deps/$(LANG1b).dix $@
-
 $(LANG1).autogen.att.gz: $(LANG1).autogen.bin
-	lt-print $< | gzip -9 -c > $@
-
-$(LANG1b).autogen.att.gz: $(LANG1b).autogen.bin
 	lt-print $< | gzip -9 -c > $@
 
 $(LANG1).automorf.att.gz: $(LANG1).automorf.bin
 	lt-print $< | gzip -9 -c > $@
 
-$(LANG1b).automorf.att.gz: $(LANG1b).automorf.bin
-	lt-print $< | gzip -9 -c > $@
-
 $(LANG1).autopgen.bin: .deps/$(LANG1).post.dix
 	lt-comp lr $< $@
 
+$(LANG1b).automorf.bin: .deps/$(LANG1b).dix
+	apertium-validate-dictionary .deps/$(LANG1b).dix
+	lt-comp lr .deps/$(LANG1b).dix $@
+
+$(LANG1b).autogen.bin: .deps/$(LANG1b).dix
+	apertium-validate-dictionary .deps/$(LANG1b).dix
+	lt-comp rl .deps/$(LANG1b).dix $@
+
+$(LANG1b).autogen.att.gz: $(LANG1b).autogen.bin
+	lt-print $< | gzip -9 -c > $@
+
+$(LANG1b).automorf.att.gz: $(LANG1b).automorf.bin
+	lt-print $< | gzip -9 -c > $@
+
 $(LANG1b).autopgen.bin: .deps/$(LANG1b).post.dix
+	lt-comp lr $< $@
+
+$(LANG1c).automorf.bin: .deps/$(LANG1c).dix
+	apertium-validate-dictionary .deps/$(LANG1c).dix
+	lt-comp lr .deps/$(LANG1c).dix $@
+
+$(LANG1c).autogen.bin: .deps/$(LANG1c).dix
+	apertium-validate-dictionary .deps/$(LANG1c).dix
+	lt-comp rl .deps/$(LANG1c).dix $@
+
+$(LANG1c).autogen.att.gz: $(LANG1c).autogen.bin
+	lt-print $< | gzip -9 -c > $@
+
+$(LANG1c).automorf.att.gz: $(LANG1c).automorf.bin
+	lt-print $< | gzip -9 -c > $@
+
+$(LANG1c).autopgen.bin: .deps/$(LANG1c).post.dix
 	lt-comp lr $< $@
 
 ###############################################################################
