--- a/Makefile.am
+++ b/Makefile.am
@@ -64,6 +64,8 @@ TARGETS_COMMON =			\
 .deps/$(LANG1c).post.dix: $(BASENAME).post-$(LANG1).dix
 	xsltproc --stringparam alt $(LANG1c) alt.xsl $(BASENAME).post-$(LANG1).dix >$@
 
+###############################################################################
+
 $(LANG1).automorf.bin: .deps/$(LANG1).dix
 	apertium-validate-dictionary .deps/$(LANG1).dix
 	lt-comp lr .deps/$(LANG1).dix $@
@@ -80,6 +82,8 @@ $(LANG1).automorf.att.gz: $(LANG1).automorf.bin
 
 $(LANG1).autopgen.bin: .deps/$(LANG1).post.dix
 	lt-comp lr $< $@
+
+###############################################################################
 
 $(LANG1b).automorf.bin: .deps/$(LANG1b).dix
 	apertium-validate-dictionary .deps/$(LANG1b).dix
@@ -98,6 +102,8 @@ $(LANG1b).automorf.att.gz: $(LANG1b).automorf.bin
 $(LANG1b).autopgen.bin: .deps/$(LANG1b).post.dix
 	lt-comp lr $< $@
 
+###############################################################################
+
 $(LANG1c).automorf.bin: .deps/$(LANG1c).dix
 	apertium-validate-dictionary .deps/$(LANG1c).dix
 	lt-comp lr .deps/$(LANG1c).dix $@
@@ -114,6 +120,49 @@ $(LANG1c).automorf.att.gz: $(LANG1c).automorf.bin
 
 $(LANG1c).autopgen.bin: .deps/$(LANG1c).post.dix
 	lt-comp lr $< $@
+
+###############################################################################
+## Spell checker
+###############################################################################
+
+$(LANG1).zhfst: .deps/acceptor.default.hfst .deps/errmodel.default.hfst
+	rm -f $@
+	zip -Z store -j $@ .deps/acceptor.default.hfst .deps/errmodel.default.hfst speller/index.xml
+
+.deps/editdist.default.hfst: speller/editdist.default.txt .deps/acceptor.default.hfst
+	python dev/editdist.py -v -s -d 1 -e '@0@' -i $< -a .deps/acceptor.default.hfst >$@.txt
+	hfst-txt2fst -i $@.txt -e '@0@' -o $@
+	rm -f $@.txt
+
+.deps/editstrings.default.hfst: .deps/strings.default.hfst .deps/editdist.default.hfst
+	hfst-disjunct $^ | hfst-minimise | hfst-repeat -f 1 -t 2 -o $@
+
+.deps/errmodel.default.hfst: .deps/words.default.hfst .deps/editstrings.default.hfst
+	hfst-disjunct $^ | hfst-fst2fst -f olw -o $@
+
+.deps/words.default.hfst: speller/words.default.txt
+	grep -v -e "^#" -e "^$$" $< | hfst-strings2fst -j -o $@
+
+.deps/strings.default.hfst: speller/strings.default.txt .deps/anystar.hfst
+	grep -v -e "^#" -e "^$$" $< | hfst-strings2fst -j | hfst-concatenate .deps/anystar.hfst - | hfst-concatenate - .deps/anystar.hfst -o $@
+
+.deps/anystar.hfst:
+	echo "?*;" | hfst-regexp2fst -S -o $@
+
+.deps/$(LANG1).autogen.bin: .deps/$(LANG1).dix
+	lt-comp rl $< $@
+
+.deps/acceptor.default.hfst: .deps/$(LANG1).autogen.bin 
+	lt-print .deps/$(LANG1).autogen.bin | sed 's/ε/@0@/g' | sed 's/ /@_SPACE_@/g' | hfst-txt2fst | hfst-fst2fst -t | hfst-project --project=lower | hfst-minimise |hfst-fst2fst -f olw -o $@ 
+
+.deps/spell.$(LANG1).dix: .deps/$(LANG1).dix .deps/.d
+	echo '<dictionary>' > $@
+	cat $< | xmllint  --xpath './/alphabet|.//sdefs|.//pardefs|.//section[@id="main"]' - >> $@
+	echo '</dictionary>' >> $@
+	cat .deps/spell.$(LANG1).dix | xmllint --encode utf8 - > .deps/spell.$(LANG1).dixtmp
+	mv .deps/spell.$(LANG1).dixtmp $@
+
+
 
 ###############################################################################
 ## Disambiguation rules
@@ -142,7 +191,13 @@ EXTRA_DIST=$(BASENAME).$(LANG1).dix		\
 apertium_ocidir=$(prefix)/share/apertium/$(BASENAME)/
 apertium_oci_srcdir=$(prefix)/share/apertium/$(BASENAME)/
 
-apertium_oci_DATA=$(TARGETS_COMMON) $(LANG1).prob
+EXTRA_TARGETS=
+
+if HAVE_HFSTOSPELL
+EXTRA_TARGETS += $(LANG1).zhfst
+endif # HAVE_HFSTOSPELL
+
+apertium_oci_DATA=$(TARGETS_COMMON) $(EXTRA_TARGETS)
 
 pkgconfigdir = $(prefix)/share/pkgconfig
 pkgconfig_DATA = $(BASENAME).pc
