--- a/.gitattributes
+++ b/.gitattributes
@@ -14,6 +14,7 @@
 /autogen.sh -text
 /buscaPar.xsl -text
 /configure.ac -text
+dev/editdist.py -text
 /modes.xml -text
 /oci.prob -text svneol=unset#unset
 /principal.xsl -text
