--- a/texts/Makefile
+++ b/texts/Makefile
@@ -1,6 +1,6 @@
 #SRC=atòm.tagged.txt continent.tagged.txt bastida.tagged.txt carcassona_ciutat.tagged.txt galaxia.tagged.txt glacier.tagged.txt neptun_prov.tagged.txt uranus_prov.tagged.txt leclercq_gascon.tagged.txt cors_aran.tagged.txt hlama_aran.tagged.txt
 #SRC=atòm.tagged.txt continent.tagged.txt bastida.tagged.txt carcassona_ciutat.tagged.txt galaxia.tagged.txt glacier.tagged.txt neptun_prov.tagged.txt uranus_prov.tagged.txt leclercq_gascon.tagged.txt cors_aran.tagged.txt hlama_aran.tagged.txt
-SRC=continent.tagged.txt cors_aran.tagged.txt hlama_aran.tagged.txt
+SRC=continent.tagged.txt cors_aran.tagged.txt hlama_aran.tagged.txt uranus_prov.tagged.txt
 
 all: oci.unigram.prob
 
