restauracion oci@aran

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,14 +19,12 @@ TARGETS_COMMON =			\
 	$(LANG1c).autogen.bin		\
 	$(LANG1c).autogen.att.gz		\
 	$(LANG1c).autopgen.bin		\
-	$(LANG1).prob				\
 	$(LANG1).rlx.bin
-#	$(LANG1b).automorf.bin		\
-#	$(LANG1b).automorf.att.gz	\
-#	$(LANG1b).autogen.bin		\
-#	$(LANG1b).autogen.att.gz		\
-#	$(LANG1b).autopgen.bin		\
-#
+	$(LANG1b).automorf.bin		\
+	$(LANG1b).automorf.att.gz	\
+	$(LANG1b).autogen.bin		\
+	$(LANG1b).autogen.att.gz		\
+	$(LANG1b).autopgen.bin
 
 # Use this goal for creating .deps, otherwise make -j2 will give problems:
 @ap_include@
