retrait de la fonctionnalité actuelle de gestion des variétés et retrait des modes et builds associés. Simplification du dictionnaire pour le limiter à un jeu de données de test restreint. Ajout d'un prototype de test pour une nouvelle gestion des variétés via un système de préférences (fichiers de règles, mots, paradigmes et modes). Ajout d'un fichier règles permettant de trier en fonction de préférences optionelles renseignées par l'utilisateur en entrée de stream. Ajout d'un fichier de règles permettant de forcer une liste de variations pour le gascon (sur de données de test). Ajout des modes correspondants aux deux fichiers de règles décrits précédement. Modification du Makefile pour compiler les nouveaux fichiers

--- a/.gitignore
+++ b/.gitignore
@@ -17,18 +17,11 @@
 /oci.automorf.att.gz
 /oci.automorf.bin
 /oci.autopgen.bin
+/oci_gascon.autopgen.bin
+/oci.prefs.rlx.bin
+/oci_gascon.prefs.rlx.bin
 /oci.rlx.bin
 /oci.zhfst
-/oci@aran.autogen.att.gz
-/oci@aran.autogen.bin
-/oci@aran.automorf.att.gz
-/oci@aran.automorf.bin
-/oci@aran.autopgen.bin
-/oci@gascon.autogen.att.gz
-/oci@gascon.autogen.bin
-/oci@gascon.automorf.att.gz
-/oci@gascon.automorf.bin
-/oci@gascon.autopgen.bin
 /*.hfst
 /.DS_Store
 /*.mode
